hackishly fixed scrollpane/ JS layout issues

--- a/helpdesk/static/helpdesk/helpdesk.css
+++ b/helpdesk/static/helpdesk/helpdesk.css
@@ -36,12 +36,16 @@ p {
 }
 
 #header {
+    position: absolute;
+    z-index: 100;
     height: 100px;
     border-bottom: 1px solid #E5E5E5;
     background-color: #fff;
+    width: 100%;
     min-width: 1100px;
     padding: 10px;
 }
+
 
 #header #main_menu {
     float: right;
@@ -58,6 +62,10 @@ p {
 }
 
 #body {
+    /*
+    position: absolute;
+    top: 150px;
+    */
     margin: auto;
     width: 100%; 
     overflow-y: hidden;
@@ -87,7 +95,6 @@ p {
 .jspCapBottom {
     height: 150px;
 }
-
 
 #inner_header {
     padding: 10px;
